# django-template

./: .dockerignore  .env.example  .gitignore  Makefile  entrypoint.sh  pyproject.toml
core/api/: shemas.py  urls.py
core/api/v1/: urls.py
core/api/v1/products/: handlers.py  shemas.py
core/apps/products/: admin.py
core/apps/products/entites/: products.py
core/apps/products/migrations/: 0001_initial.py
core/apps/products/models/: products.py
core/apps/products/services/: products.py
core/project/: asgi.py  urls.py  wsgi.py
core/project/settings/: main.py
docker_compose/: storages.yaml
