[tool.poetry]
name = "django-template"
version = "0.1.0"
description = ""
authors = ["Alexandr <sasa20sasha19910@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
